# nullslot

./: .gitignore  APP_FLOW.md  ARCHITECTURE.md  FRONTEND_BOOTSTRAP_PROMPT.md  OVERVIEW.md  README.md  docker-compose.yml
backend/: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
backend/.sqlx/: query-000b806bb47d910a81b9a2e94c90c4f3ef92f5b3f097c820ef5e142ff0c681fd.json  query-0acfb4b10d97d2fc0dd0b86ad9f85cf295ac104ac5529ff6b57a0997b3492e73.json  query-12ec4aabc975fb62a6ae79bae980d603e973debc13048cac549b3041a5784832.json  query-16e9bececf756b1ded6a81459dc3e770e3bd75dc5eeaf102716d11008968892d.json  query-181f7f82a82aacd5b5d890c0e2c374ecbc111c08523e95dfc9a5728cd801eb38.json  query-182d5d7e87ee4b34c9a35731cfd3f7d4e4a3d0c406198d23c73991340b583413.json  query-1a78ce090a307caa3b3815b853eb7325b55c8a06c1a4901d47c5d15b0b022a84.json  query-1e785c2baa9ea2833324a3df97686e1f41c6a9dd27180b39bab8c37f3c1ba108.json  query-2004464ec68c46866f1f79db91ff958b9951609d0a37ca0250f7ade50950525e.json  query-2021b49664eaed46c7a7c854009793d5c33a57017a9901fc86501576ae1cef59.json  query-26393c9f9c3f4981b8ffeaae7b4f1ee1de162270e7ede0f15d48fb70eb35fabf.json  query-2746c1c9ec3c5847e9735ecd672345f411d4d7a0056088dae7081e86269cf330.json  query-2963232f7a108112b30e3fd36a713fb20ccad014777bbefe9b71894bef26356c.json  query-30aca696b99b3a44fb71b0f3a0854bbd53878b627cfdfd7c2356c44d99cfb665.json  query-3188338c71db489f5c03ceb34933fecc1acba6af69a16cd51a860e22addfb5eb.json  query-3255eb93a2933b9685a43dcdce1b5efeaa2b5c7910e5b08290aa5644e8a87b58.json  (+59 more)
backend/src/: config.rs  (+4 more)
(+86 files in other folders)
